dataset1235/2025-2/2318198438/users/1225947802/executions/1897677159_2667036473.log
== RUN (2025-08-18 23:57:27)
-- CODE: 
num=float(input("Digite a temperatura:"))
print(num + 273.15)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
Digite a temperatura:293.4
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
Digite a temperatura:263.15
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
Digite a temperatura:233.14999999999998
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
Digite a temperatura:373.15
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
Digite a temperatura:273.15
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
Digite a temperatura:303.65
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-18 23:55:34)
-- CODE: 
num=input("Digite a temperatura:")
print(round(num, 2)num + 273.15)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
File "XXXX", line 2
    print(round(num, 2)num + 273.15)
          ^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
File "XXXX", line 2
    print(round(num, 2)num + 273.15)
          ^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
File "XXXX", line 2
    print(round(num, 2)num + 273.15)
          ^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
File "XXXX", line 2
    print(round(num, 2)num + 273.15)
          ^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
File "XXXX", line 2
    print(round(num, 2)num + 273.15)
          ^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
File "XXXX", line 2
    print(round(num, 2)num + 273.15)
          ^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-18 23:57:00)
-- CODE: 
num=input("Digite a temperatura:")
print(num + 273.15)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(num + 273.15)
          ~~~~^~~~~~~~
TypeError: can only concatenate str (not "float") to str
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(num + 273.15)
          ~~~~^~~~~~~~
TypeError: can only concatenate str (not "float") to str
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(num + 273.15)
          ~~~~^~~~~~~~
TypeError: can only concatenate str (not "float") to str
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(num + 273.15)
          ~~~~^~~~~~~~
TypeError: can only concatenate str (not "float") to str
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(num + 273.15)
          ~~~~^~~~~~~~
TypeError: can only concatenate str (not "float") to str
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(num + 273.15)
          ~~~~^~~~~~~~
TypeError: can only concatenate str (not "float") to str
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-18 23:56:34)
-- CODE: 
num=input("Digite a temperatura:")
print(round(num, 2) num+273.15)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
File "XXXX", line 2
    print(round(num, 2) num+273.15)
          ^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
File "XXXX", line 2
    print(round(num, 2) num+273.15)
          ^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
File "XXXX", line 2
    print(round(num, 2) num+273.15)
          ^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
File "XXXX", line 2
    print(round(num, 2) num+273.15)
          ^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
File "XXXX", line 2
    print(round(num, 2) num+273.15)
          ^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
File "XXXX", line 2
    print(round(num, 2) num+273.15)
          ^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-18 23:57:44)
-- CODE: 
num=float(input("Digite a temperatura:"))
print(num + 273.15)
round(num, 2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
Digite a temperatura:293.4
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
Digite a temperatura:263.15
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
Digite a temperatura:233.14999999999998
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
Digite a temperatura:373.15
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
Digite a temperatura:273.15
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
Digite a temperatura:303.65
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-18 23:54:28)
-- CODE: 
num= float(input("Digite a temperatura:"))
print(num + 273.15)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
Digite a temperatura:293.4
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
Digite a temperatura:263.15
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
Digite a temperatura:233.14999999999998
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
Digite a temperatura:373.15
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
Digite a temperatura:273.15
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
Digite a temperatura:303.65
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-18 23:58:29)
-- CODE: 
num=float(input("Digite a temperatura:"))
round(num, 2)
print(num + 273.15)

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
Digite a temperatura:293.4
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
Digite a temperatura:263.15
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
Digite a temperatura:233.14999999999998
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
Digite a temperatura:373.15
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
Digite a temperatura:273.15
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
Digite a temperatura:303.65
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-18 23:51:54)
-- CODE: 
print("Digite a temperatura: ")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
Digite a temperatura:
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
Digite a temperatura:
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
Digite a temperatura:
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
Digite a temperatura:
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
Digite a temperatura:
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
Digite a temperatura:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-18 23:56:33)
-- CODE: 
num=input("Digite a temperatura:")
print(round(num, 2) num+273.15)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
File "XXXX", line 2
    print(round(num, 2) num+273.15)
          ^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
File "XXXX", line 2
    print(round(num, 2) num+273.15)
          ^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
File "XXXX", line 2
    print(round(num, 2) num+273.15)
          ^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
File "XXXX", line 2
    print(round(num, 2) num+273.15)
          ^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
File "XXXX", line 2
    print(round(num, 2) num+273.15)
          ^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
File "XXXX", line 2
    print(round(num, 2) num+273.15)
          ^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-18 23:58:28)
-- CODE: 
num=float(input("Digite a temperatura:"))
round(num, 2)
print(num + 273.15)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
Digite a temperatura:293.4
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
Digite a temperatura:263.15
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
Digite a temperatura:233.14999999999998
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
Digite a temperatura:373.15
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
Digite a temperatura:273.15
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
Digite a temperatura:303.65
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
